<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item

        android:id="@+id/community"
        android:orderInCategory="100"
        android:title="@string/community"

        />
    <item

        android:id="@+id/location"
        android:orderInCategory="100"
        android:title="@string/location"

        />
    <item

        android:id="@+id/changeProfilePic"
        android:orderInCategory="100"
        android:title="@string/changeProfilePic"

        />
    <item

        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/aboutTitle"

        />
    <item

        android:id="@+id/Signout"
        android:orderInCategory="100"
        android:title="@string/signout"

        />
    <item
        android:id="@+id/addPost"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always"
        android:title=""
        />



</menu>