<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.itakg.twitterclone.Activities.RegisterUser">


    <ImageView
    android:layout_width="120dp"
    android:layout_height="120dp"
    android:layout_gravity="center"
    android:src="@mipmap/iconclone"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/text_color_btn"
        android:textSize="40sp"
        android:typeface="serif"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <EditText
        android:id="@+id/candid_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:ems="10"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:paddingLeft="20dp"
        android:background="@drawable/edit_text_background"
        android:inputType="textPersonName"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/candid_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:id="@+id/candid_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <EditText
        android:id="@+id/candid_username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/text_color"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="20dp"
        android:inputType="text"
        android:maxLength="10"
        android:hint="@string/userName"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="30sp"
        android:typeface="serif"
        android:onClick="RegisterNewUser"
        android:text="@string/submit"/>


</LinearLayout>
